# itertools-num

./: Cargo.toml  LICENSE-MIT  README.rst
src/: ext.rs  lib.rs  linspace.rs
tests/: quick.rs  tests.rs
