[package]
name = "itertools-num"
version = "0.1.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/bluss/itertools-num"
documentation = "https://docs.rs/itertools-num/"
authors = ["bluss"]

description = """
Numerical iterator tools. Extra iterators and iterator methods and functions.
"""

[dependencies]
num-traits = "0.1"

[dev-dependencies]
itertools = "0.4"
quickcheck = "0.3"
