[package]
name = "itertools-num"
version = "0.1.3"
license = "MIT/Apache-2.0"
repository = "https://github.com/bluss/itertools-num"
documentation = "https://docs.rs/itertools-num/"
authors = ["bluss"]

description = """
Numerical iterator tools. Extra iterators and iterator methods and functions.
"""
categories = ["science"]

[dependencies]
num-traits = "0.2.2"

[dev-dependencies]
itertools = "0.7.7"
quickcheck = { version = "0.7", default-features = false }


[package.metadata.release]
no-dev-version = true
